Add img and new changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="allbox">
-    <div class="box">
+    <div class="box1">
     <h1>RISD&nbsp&nbsp&nbspARCHITECTURE<br>
         RISD&nbsp&nbsp&nbspARCHITECTURE<br>
         RISD&nbsp&nbsp&nbspARCHITECTURE<br>
@@ -17,7 +17,7 @@
         RISD&nbsp&nbsp&nbspARCHITECTURE<br>
         RISD&nbsp&nbsp&nbspARCHITECTURE<br></h1>
     </div>
-    <div class="box">
+    <div class="box2">
     <h2>RISDARCHITECTURE<br>
         RISDARCHITECTURE<br>
         RISDARCHITECTURE<br>
@@ -25,7 +25,7 @@
         RISDARCHITECTURE<br>
         RISDARCHITECTURE<br></h2>
     </div>
-    <div class="circle">
+    <div class="circle1">
       <h3>RISDARCHITECTURE<br>
           RISDARCHITECTURE<br>
           RISDARCHITECTURE<br>
@@ -41,7 +41,7 @@
           RISDARCHITECTURE<br>
           RISDARCHITECTURE<br></h3>
     </div>
-    <div class="box">
+    <div class="box3">
     <h2>RISDARCHI&nbspTE&nbsp&nbspCTURE<br>
         R&nbspS&nbspA&nbspC&nbspI&nbspE&nbspT&nbspR&nbsp<br>
         RISD&nbspARCHITECTURE<br>
@@ -49,7 +49,7 @@
         RISD&nbspARCH&nbspITEC&nbspTURE&nbsp<br>
         RISDA&nbspRCHIT&nbspECTUR&nbspE<br></h2>
     </div>
-    <div class="circle">
+    <div class="circle2">
       <h3>RISDARCHITECTURE<br>
           RISD&nbsp&nbspAR&nbspCH&nbspITECTURE<br>
           RISDARCH&nbsp&nbspITE&nbsp&nbspCTURE<br>
@@ -62,7 +62,7 @@
           RISDA&nbspRCH&nbsp&nbspITECTURE<br>
           RISDAR&nbspCHIT&nbspECTURE<br></h3>
     </div>
-    <div class="box">
+    <div class="box4">
     <h1>RISD&nbsp&nbsp&nbspARCHITECTURE<br>
         &nbspRISD&nbsp&nbsp&nbspARCHITECTURE<br>
         &nbsp&nbspRISD&nbsp&nbsp&nbspARCHITECTURE<br>
@@ -70,7 +70,7 @@
         &nbsp&nbsp&nbsp&nbspRISD&nbsp&nbsp&nbspARCHITECTURE<br>
         &nbsp&nbsp&nbsp&nbsp&nbspRISD&nbsp&nbsp&nbspARCHITECTURE<br></h1>
     </div>
-    <div class="circle">
+    <div class="circle3">
       <h3>RISDARCHITECTURE<br>
           RISDARCHITECTURE<br>
           RISDARCHITECTURE<br>
@@ -85,8 +85,8 @@
           RISDARCHITECTURE<br>
           RISDARCHITECTURE<br>
           RISDARCHITECTURE<br></h3>
-    </div>    
-    <div class="box">
+    </div>
+    <div class="box5">
     <h2>RISDARRRRRRRTURE<br>
         RISDACCCCCCCTURE<br>
         RISDAHHHHHHHHTURE<br>
@@ -94,7 +94,7 @@
         RISDATTTTTTT&nbspURE<br>
         RISDAEEEEEEEEURE<br></h2>
     </div>
-    <div class="box">
+    <div class="box6">
     <h2>RISDARCHI&nbsp&nbsp&nbspTE&nbsp&nbspCTURE<br>
         R&nbspS&nbspA&nbspC&nbspI&nbspE&nbspT&nbspR&nbsp<br>
         RISD&nbspARCHITECTURE<br>
